--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,8 +60,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="State:"
+        android:text="校正步驟"
         android:id="@+id/textView"
-        android:textColor="#ffff00"/>
+        android:textColor="@android:color/primary_text_dark"
+        android:textSize="20dp"/>
 
 </RelativeLayout>
