--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:id="@+id/mainLayout">
 
     <RelativeLayout
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:id="@+id/ARParentLayout"
         android:layout_centerVertical="true"
